Cleaning to ARC Based project
Signed-off-by: Imthiaz Rafiq <imthi@flip.me>

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 FSQDemo/FSQDemo.xcodeproj/project.xcworkspace/xcuserdata/*.xcuserdatad
 FSQDemo/FSQDemo.xcodeproj/xcuserdata/*.xcuserdatad
+
+FSQDemo/Demo.xcworkspace/
