--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 FSQDemo/FSQDemo.xcodeproj/project.xcworkspace/xcuserdata/*.xcuserdatad
 FSQDemo/FSQDemo.xcodeproj/xcuserdata/*.xcuserdatad
 
-FSQDemo/Demo.xcworkspace/
+FSQDemo/Demo.xcworkspace/xcuserdata/
